# mr-kit

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml  webui.yml
Casks/: mr-kit.rb
scripts/: build-webui.mjs  build.mjs  set-macos-release-secrets.mjs
src/: index.html  main.js  styles.css  webui-compat.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
