[package]
name = "mr-kit"
version = "0.12.2"
description = "MR Kit - GitLab MR 快捷工具"
authors = ["weiguang"]
edition = "2021"

[lib]
name = "mr_kit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2.3.2"
notify-rust = "4.18.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
objc2-app-kit = "0.3"
